--- a/style.css
+++ b/style.css
@@ -1,85 +1,73 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;900&display=swap");
-
-body{
-    text-align: center;
-    background-image: url("https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/superover-bg.png");
-    background-size: cover;
-    font-family: "Poppins", sans-serif;
-    color: white;
-}
-
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin: 0%;
+    padding: 0%;
 }
-
-#logo{
-    width: 10vw;
-    margin-top: 5vh;
-}
-
-h1{
-    font-size: 90px;
-    font-weight: 600;
-}
-
-section{
-    margin: 10vh auto;
-}
-
-#buttons{
-    width: 30%; 
-    /* padding: 10px; */
-    cursor: pointer;
-}
-
-.button{
-
-    width: 200px;
-    font-size: 1.5em;
-    margin: 0 30px;
-}
-
-.balls{
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    color:white;
-    border-radius: 50%;
-    margin: 5px;
-    line-height: 300px;
-    font-weight: bold;
-    font-size: 2em;
+body{
+    background-image: url(" https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/superover-bg.png");
+    background-size: cover;
+    font-family: "Poppins",sans-serif;
+    color: white;
     text-align: center;
-    text-align: center;
-    padding: 10px;
-    background-color: white;
 }
-
-
-.scoreboard{
-    font-size: 3em;
-    font-weight: bold;
+header{
+    margin: 30px;
 }
-
+img{
+    width: 150px;
+}
+.container1{
+    display: flex;
+    justify-content: center;
+    margin: 50px ;
+    margin-bottom: 50px;
+    gap: 100px;
+}
 .score{
-    padding:30px;
-    height: auto;
+    height: 320px;
+    width: 400px;
+    padding: 30px;
+    box-sizing: border-box;
     border-radius: 20px;
-    margin: 0 30px;
 }
-
 #team1{
-    display: inline-block;
     background-color: #005fa2;
 }
-
 #team2{
-    display: inline-block;
-    background-color: #1fa83d;
+    background-color: rgb(0, 255, 0);
 }
+.score h1{
+    font-size: 70px;
+    font-weight: 600;
+}
+.balls{
+    margin-top: 30px;
+    margin-bottom: 10px;
+    display: flex;
 
-#team1-superover, #team2-superover{
-    margin: 20px;
+    
+    
+} 
+.circle{
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 50%;
+    margin: 5px;
+    color: black;
+    font-weight: bold;
+    font-size: 2em;
+    padding: 3px;
+    box-sizing: border-box;
+
+
+}
+.scoreboard{
+    font-size: 50px;
+    font-weight: bold;
+}
+.buttons img{
+    width: 80px;
+    margin:0px 20px;
+    cursor: pointer;
 }
